--- a/frontend/templates/map.html
+++ b/frontend/templates/map.html
@@ -7,7 +7,7 @@
 </div>
 
 <!-- Google Maps API -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOVYRIgupAurZup5y1PRh8Ismb1A3lLao&libraries=places&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=   YOUR GOOGLE MAP API " async defer></script>
 <script>
 function initMap() {
     // Center map on India
